fixed sm nav bar collapse issue

--- a/web/css/client.css
+++ b/web/css/client.css
@@ -1,6 +1,3 @@
-.delay-1 {
-    animation-delay: 1s;
-}
 .stack{
     display:inline-block;
 }
